--- a/style.css
+++ b/style.css
@@ -3,30 +3,12 @@
     padding: 0;
     box-sizing: border-box;
 }
-section{
-
+.section{
     background: white;
     margin: 20px 0;
     padding: 30px;
     border-radius: 15px;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-}
-
-h2{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: white;
-    border-radius: 15px;
-}
-
-h3 {
-    display: block;
-    font-size: 1.17em;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
-    unicode-bidi: isolate;
 }
 
 .body {
@@ -40,6 +22,25 @@ h3 {
     min-height: 100vh;
 }
 
+.title{
+    color: #4a5568;
+    margin-bottom: 20px;
+    font-size: 1.8rem;
+    border-bottom: 3px solid #667eea;
+    padding-bottom: 10px;
+}
+
+h3 {
+    display: block;
+    font-size: 1.17em;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+    unicode-bidi: isolate;
+}
+
 header{
     background-color: white;
     border-radius: 15px;
@@ -47,6 +48,7 @@ header{
     padding: 30px;
     text-align: center;
 }
+
 .headerHeading{
     color: #667eea; font-size: 2.5rem; margin-bottom: 10px;
     margin-top: 0;
@@ -54,41 +56,6 @@ header{
 
 .headerdesc1{
     margin: 0; font-size: 1.1rem; color: #666;
-}
-
-.grid{
-    margin-top: 20px; margin-bottom: 20px;
-    padding: 30px;
-}
-
-.gridHeading .grid{
-    line-height: 1.6;
-    margin-bottom: 20;
-    padding: 0;
-    box-sizing: border-box;
-    color: #4a5568;
-    margin-bottom: 20px;
-    font-size: 1.8rem;
-    border-bottom: 3px solid #667eea;
-    padding-bottom: 10px;
-
-    /* display: block;
-    font-size: 1.17em;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
-    unicode-bidi: isolate;     */
-
-}
-.gridDesc1{
-    
-    line-height: 1.6;
-    color: #333;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
 }
 
 
